# ida-tilegx

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix
isa/: tilegx-autocmt.nuon  tilegx-gen.nu  tilegx.nuon
src/: analysis.rs  constprop.rs  decode.rs  ffi.hpp  generated.h  generated.rs  lib.rs  loader.cpp  probe.cpp  processor.cpp  raw.rs  spr.rs  strings.rs  tables.rs  tests.rs  types.rs
