[package]
name        = "tilegx_core"
authors     = [ "Amaan Qureshi <contact@amaanq.com>" ]
categories  = [ "encoding", "no-std", "parser-implementations" ]
description = "Tilera TILE-Gx processor module for IDA Pro 9.x"
edition     = "2024"
keywords    = [ "tilegx", "tilera", "ida", "disassembler", "reverse-engineering" ]
license     = "MPL-2.0"
readme      = "README.md"
repository  = "https://github.com/amaanq/ida-tilegx"
version     = "0.1.0"

[lib]
crate-type = [ "staticlib", "rlib" ]
doctest    = false
name       = "tilegx_core"

[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.dev]
panic = "abort"

[lints.clippy]
cargo    = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

blanket_clippy_restriction_lints = "allow"
restriction                      = { level = "warn", priority = -1 }

arbitrary_source_item_ordering     = "allow"
arithmetic_side_effects            = "allow"
as_conversions                     = "allow"
doc_paragraphs_missing_punctuation = "allow"
else_if_without_else               = "allow"
error_impl_error                   = "allow"
exhaustive_enums                   = "allow"
exhaustive_structs                 = "allow"
expect_used                        = "allow"
implicit_return                    = "allow"
indexing_slicing                   = "allow"
integer_division                   = "allow"
integer_division_remainder_used    = "allow"
let_underscore_must_use            = "allow"
let_underscore_untyped             = "allow"
little_endian_bytes                = "allow"
map_err_ignore                     = "allow"
missing_asserts_for_indexing       = "allow"
missing_docs_in_private_items      = "allow"
missing_errors_doc                 = "allow"
missing_inline_in_public_items     = "allow"
missing_trait_methods              = "allow"
mod_module_files                   = "allow"
module_name_repetitions            = "allow"
multiple_crate_versions            = "allow"
must_use_candidate                 = "allow"
needless_borrowed_reference        = "allow"
print_stderr                       = "allow"
print_stdout                       = "allow"
pub_use                            = "allow"
pub_with_shorthand                 = "allow"
question_mark_used                 = "allow"
ref_patterns                       = "allow"
semicolon_outside_block            = "allow"
separated_literal_suffix           = "allow"
single_call_fn                     = "allow"
single_char_lifetime_names         = "allow"
std_instead_of_alloc               = "allow"
std_instead_of_core                = "allow"
tests_outside_test_module          = "allow"
unwrap_used                        = "allow"
